@@ -1,3 +1,7 @@
+2004-05-23  Bruno Haible  <bruno@clisp.org>
+
+	* backquote.lisp (bq-nconcable): Renamed from bq-nconc.
+
 2004-05-10  Bruno Haible  <bruno@clisp.org>
 
 	* clos-class2.lisp (add-direct-subclass): Use a weak hash-table when
